# autd3-doc

./: .gitignore  Dockerfile  LICENSE  Makefile.toml  README.md  book.toml  build.py  katex_macro.txt
.github/workflows/: build.yml  pr.yml
css/: no-link-summary.css  tab.css
en/: 404.html  about_AUTD3.html  document_history.html  index.html  print.html  searcher-c2a407aa.js  searchindex-3790e125.js  searchindex-5aadcb70.js  searchindex.js  searchindex.json  toc-9a8f37e2.js  toc.html  toc.js
en/Users_Manual/: LICENSE.html  advanced.html  concept.html  controller.html  firmware_v10_vs_v11.html  firmware_version.html  gain.html  geometry.html  getting_started.html  link.html  modulation.html  release_notes.html  silencer.html  stm.html  tutorial.html  users_manual.html  versioning.html
en/css/: faq.css
en/js/: codeblock_filename-e59e1f9a.js
jp/: 404.html  about_AUTD3.html  document_history.html  index.html  print.html  searcher-c2a407aa.js  searchindex-4a1a2038.js  searchindex-7e1be550.js  searchindex.js  searchindex.json  toc-dbc51af9.js  toc.html  toc.js
jp/Developer_Manual/: Developer_manual.html  cpu.html  fpga.html  software.html
jp/Theory/: linear.html  multi-freq.html  phasedarray.html  pwm.html  radiation_pressure.html  resolution.html  theory.html
jp/Users_Manual/: LICENSE.html  advanced.html  concept.html  controller.html  fan.html  (+17 more)
js/: codeblock_filename.js  tab.js
src/codes/Users_Manual/Tutorial/single/: CMakeLists.txt  Program.cs  main.cpp  main.py  main.rs
tools/: .gitignore  cpp_test.py  cs_test.py  python_test.py  rs_test.py  ruff.toml
(+939 files in other folders)
